// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<div>
  <button
    class="button-0-2-1 button-d0-0-2-3"
    type="button"
  >
    Press Me
  </button>
</div>
`;

exports[`Link renders 1`] = `
<div>
  <button
    class="link-0-2-2"
    type="button"
  >
    Click Me
  </button>
</div>
`;
